--- a/04-HTML-CSS copy/starter/style.css
+++ b/04-HTML-CSS copy/starter/style.css
@@ -1,22 +1,55 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(147, 194, 221);
+  background-color: #4281a4;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 20px;
+  padding: 50px;
 }
 
 h1 {
   font-size: 50px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  padding-top: 8px;
+}
+
+p {
+  margin-bottom: 20px;
 }
 
 .first {
-  color: rgb(73, 17, 17);
+  color: #6442a4;
 }
 
 #your-name {
-  background-color: rgb(194, 194, 91);
+  background-color: #42a495;
   border: 5px solid #444444;
   border-radius: 20px;
-  padding-left: 10px;
-  padding-bottom: 10px;
+  width: 400px;
+  padding: 25px;
+  margin-top: 30px;
+}
+
+input,
+button {
+  padding: 10px;
+  font-size: 16px;
+}
+
+#course-image {
+  width: 400px;
+}
+
+#your-name h2 {
+  color: olive;
 }
