--- a/05-Guess-My-Number copy/starter/style.css
+++ b/05-Guess-My-Number copy/starter/style.css
@@ -12,9 +12,12 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+    'Press Start 2P', sans-serif;
   color: #eee;
-  background-color: #222;
+  background-image: linear-gradient(darkblue, rgb(68, 0, 68));
+  /* background-color: #222; */
   /* background-color: #60b347; */
 }
 
@@ -58,6 +61,7 @@ h1 {
 
 .number {
   background: #eee;
+  border-radius: 20px;
   color: #333;
   font-size: 6rem;
   width: 15rem;
@@ -80,11 +84,13 @@ h1 {
   position: absolute;
   top: 2rem;
   left: 2rem;
+  border-radius: 20px;
 }
 
 .guess {
   background: none;
   border: 4px solid #eee;
+  border-radius: 20px;
   font-family: inherit;
   color: inherit;
   font-size: 5rem;
@@ -97,6 +103,7 @@ h1 {
 
 .btn {
   border: none;
+  border-radius: 20px;
   background-color: #eee;
   color: #222;
   font-size: 2rem;
