--- a/06-Modal copy/starter/style.css
+++ b/06-Modal copy/starter/style.css
@@ -10,7 +10,8 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #333;
   line-height: 1.5;
   height: 100vh;
