--- a/07-Pig-Game copy/starter/style.css
+++ b/07-Pig-Game copy/starter/style.css
@@ -12,7 +12,8 @@ html {
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', 'Nunito', sans-serif;
   font-weight: 400;
   height: 100vh;
   color: #333;
